--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<h1>Dandamudi site hosted </h1>
+<!DOCTYPE html>
+<html>
+    <body>
+        <h1>Hello world</h1>
+        <p>dandamudi hosted with Github Pages.</p>
+    </body>
+</html>
