--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
     <body>
         <h1>Hello world</h1>
-        <p>dandamudi hosted with Github Pages.</p>
+        <p>Sit is going to up soon.</p>
     </body>
 </html>
